--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/15.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/15.md
@@ -7,9 +7,19 @@ title = "१५"
 
 षोडशः सर्गः  
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 अथान्यो(1)न्यं विमुक्तास्त्रशस्त्रजालैर्भयं(2)करैः ।  
 युद्धमासीत्सुनासीरसुरारिबलयोर्महत्(3) ॥ 16.1 ॥  
 {1.अन्योन्य.2.भयंकरुम्.3.द्वयोः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+अथान्यो(1)न्यं विमुक्तास्त्रशस्त्रजालैर्भयं(2)करैः ।  
+युद्धमासीत्सुनासीरसुरारिबलयोर्महत्(3) ॥ 16.1 ॥  
+{1.अन्योन्य.2.भयंकरुम्.3.द्वयोः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -21,8 +31,17 @@ title = "१५"
 अथेति । अथ सुरासुरसंमेलनानन्तरम् । भयंकरैर्भयमुत्पादयद्भिः । अन्योन्यं परस्परं विमुक्तानि प्रहर्तुं विसृष्टान्यस्त्रशस्त्राणां शरादिमोहनादीनां जालानि समूहास्तैः कृत्वा । सुनासीर इन्द्रः, सुरारिस्तारकः, तयोर्बले सैन्ये तयोः । 'बलं गन्धरसे रुपे स्थामनि स्थौल्यसैन्ययोः' । इति विश्वः । महद्धोरं युद्धं सङ्ग्राम आसीद्वभूव । सर्गेऽस्मिन्वृत्तमनुष्टुप् ॥ 16.1 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 पत्तिः पत्तिमभीयाय रणाय रथिनं रथी ।  
 तुरङ्गस्थं तुरड्‌गस्थो दन्तिस्थं दन्तिनि स्थितः ॥ 16.2 ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+पत्तिः पत्तिमभीयाय रणाय रथिनं रथी ।  
+तुरङ्गस्थं तुरड्‌गस्थो दन्तिस्थं दन्तिनि स्थितः ॥ 16.2 ॥  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -34,9 +53,19 @@ title = "१५"
 पत्तिरिति । पत्तिः पादचारी पत्तिं पादचारिणम्, रथी रथारुढो रथिनं रथारुढम्, तुरङ्गस्थोऽश्ववाहस्तुरङ्गस्थमश्ववाहम्, दन्तिनि गजो स्थितो दन्तिस्थं गजारोहम्, रणाय रणं कर्तुमभीयाय संमुखमगमत् । अथ प्रत्येकगं क्रियासम्बन्धो विधेयः । अन्यथा वहुत्वप्रसङ्गः ॥ 16.2 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 युद्धाय धावतां धीरं वीराणामितरेतरम् ।  
 वैतालिकाः (4)कुलाधीशा नामान्यलमुदाहरन् ॥ 16.3 ॥  
 {4.कुलाधीशनामानि.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+युद्धाय धावतां धीरं वीराणामितरेतरम् ।  
+वैतालिकाः (4)कुलाधीशा नामान्यलमुदाहरन् ॥ 16.3 ॥  
+{4.कुलाधीशनामानि.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -48,9 +77,19 @@ title = "१५"
 युद्धायेति । इतरेतरं परस्परं युद्धाय कर्तुं धीरं गम्भीरं यथा तथा धावतां विद्रवतां वीराणां योद्धॄणां नामानि कुलाधीशाः कुलस्वामिनः । कुलप्रदीपा इति यावत् । अनेन स्वात्मविद्यायामतिप्रावीण्यं व्यज्यते । वैतालिका बन्दिनः । अलं भूषणम् । शोमेति यावत् । यथा स्यात्तथोदाहरन्नूचुः । अयममुकसंज्ञको वीरो घावति, अयममुकसंज्ञको वीरो धावतीत्येवंभूतं जगदुरित्यर्थः, आत्मपरावबोधार्थमिति भावः ॥ 16.3 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 (1)पठतां वन्दिवृन्दानां प्रवीरा विक्रमावलीम् ।  
 क्षणं विलम्ब्य चित्तानि ददुर्युद्धोत्सुकाः (2)पुरः ॥ 16.4 ॥  
 {1.पठिता वन्दिभिः श्रृत्वा,प्रवीरविरुदावलीः,पठिता बन्दिवृन्देन प्रवीरविरुदावलीः,पठतां बन्दिवृन्दाना प्रवीरा विरुदावलिम्.2.अपि.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+(1)पठतां वन्दिवृन्दानां प्रवीरा विक्रमावलीम् ।  
+क्षणं विलम्ब्य चित्तानि ददुर्युद्धोत्सुकाः (2)पुरः ॥ 16.4 ॥  
+{1.पठिता वन्दिभिः श्रृत्वा,प्रवीरविरुदावलीः,पठिता बन्दिवृन्देन प्रवीरविरुदावलीः,पठतां बन्दिवृन्दाना प्रवीरा विरुदावलिम्.2.अपि.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -62,9 +101,19 @@ title = "१५"
 पठतामिति । प्रवीराः प्रकृष्टयोद्धारो विक्रमावलीं पराक्रमसमाहारं पठतां स्तुवताम् 'साधु पराक्रान्तम्, साधु पराक्रान्तम्' इति वदतां बन्दिवृन्दानां वैतालिकसमूहानां पुरोग्रे चित्तानि मनांसि क्षणं विलम्ब्य ददुः । यतो युद्धोत्सुकाः समरोत्कण्ठिताः । समरोत्कण्ठितमनोदानाभावो न श्रवणेन्द्रियस्य केवलस्यैवार्थबोधासम्भवात् ॥ 16.4 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 सङ्ग्रामानन्दवर्धिष्णौ विग्रहे (3)पुलकाञ्चिते ।  
 आसीत्कवचविच्छेदो वीराणां(4) मिलतां मिथः ॥ 16.5 ॥  
 {3.पुलकाङ्किते.4.धीराणाम्.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+सङ्ग्रामानन्दवर्धिष्णौ विग्रहे (3)पुलकाञ्चिते ।  
+आसीत्कवचविच्छेदो वीराणां(4) मिलतां मिथः ॥ 16.5 ॥  
+{3.पुलकाङ्किते.4.धीराणाम्.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -76,9 +125,19 @@ title = "१५"
 संग्रामेति संग्रामानन्देन समरोत्साहेन बर्धिष्णौ वृद्धिशीले अत एव पुलकाञ्चिते रोमाञ्चव्याप्ते मिथो मिलतां सङ्गच्छमानानां वीराणां योद्धॄणां विग्रहे शरीरे । जातावेकवचनम् । कवचानां वारणानां विभेद आसीत् ॥ 16.5 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 निर्दयं खड्गभिन्नेभ्यः कवचेभ्यः (1)समुत्थितैः ।  
 आसन्ध्योमदि(2)शस्तूलैः (3)पलितैरिव (4)पाण्डुराः ॥ 16.6 ॥  
 {1.समुच्छ्रितैः.2.स्थूलौ.3.पतितैः.4.पञ्जराः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+निर्दयं खड्गभिन्नेभ्यः कवचेभ्यः (1)समुत्थितैः ।  
+आसन्ध्योमदि(2)शस्तूलैः (3)पलितैरिव (4)पाण्डुराः ॥ 16.6 ॥  
+{1.समुच्छ्रितैः.2.स्थूलौ.3.पतितैः.4.पञ्जराः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -90,9 +149,19 @@ title = "१५"
 निर्दयमिति । निर्दयं निष्कृपं खड्गभिन्नेभ्यः करवालविदीर्णेभ्यः कवचेभ्यः सकाशात्समुत्थितैरुड्डयितैस्तूलैः कार्पासैः । 'तूलः पिचौ भवेत्तूलं ब्रह्मदारुविहायसोः' । इति विश्वः । पलितैरिव जराजनितशुक्लत्वैरिव । 'पलितं जरसा शैक्ल्यम्' इत्यमरः । व्योमसहिता दिशः पाण्डुराः श्वेता आसन् । उत्प्रेक्षया कवचविच्छेदेऽपि वीराणां युद्धविषयक उत्साहो न विच्छिन्न इति ध्वन्यते । अतोऽलङ्कारेण वस्तुध्वनिः ॥ 16.6 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 खड्गा रुधिरसंलिप्ताश्चण्डांशुकरभासुराः ।  
 इतस्ततोऽपि वीराणां (5)विद्युतां वैभवं दधुः ॥ 16.7 ॥  
 {5.वैद्युतम्;विद्युतः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+खड्गा रुधिरसंलिप्ताश्चण्डांशुकरभासुराः ।  
+इतस्ततोऽपि वीराणां (5)विद्युतां वैभवं दधुः ॥ 16.7 ॥  
+{5.वैद्युतम्;विद्युतः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -104,9 +173,19 @@ title = "१५"
 खड्गा इति । रुधिरेण संलिप्ताः । तथेतस्ततश्चण्डांशुकरैः सूर्यकिरणव्यतिकरैर्भासुरास्चमत्कुर्वन्तो वीराणां खड्गा विद्युतां वैभवं सादृस्यं ददुः । तद्वच्छुशुभिर इत्यर्थः । अत्रोपमया खड्गानां वीरकरसंपर्कजनितपरिकम्पचमत्कारकारित्वं ध्वन्यते । अथोऽत्राप्यलंकारेण वस्तुध्वनिः । तथा वीरकरसंपर्कजनितपरिकम्पचमत्कारकारित्वरुपव्यङ्ग्यो प्रतिद्वन्द्विविहननजनितद्विगुणोत्सहवत्त्वं च व्यज्यते ॥ 16.7 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विसृजन्तो मुखैर्ज्वाला भीमा इव भुजंगमाः ।  
 विसृष्टाः सुभटै (6)रुष्टैर्व्योम व्यानशिरे (7)शराः ॥ 16.8 ॥  
 {6.तुष्टैः,तुङ्गा.7.असुराः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+विसृजन्तो मुखैर्ज्वाला भीमा इव भुजंगमाः ।  
+विसृष्टाः सुभटै (6)रुष्टैर्व्योम व्यानशिरे (7)शराः ॥ 16.8 ॥  
+{6.तुष्टैः,तुङ्गा.7.असुराः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -118,9 +197,19 @@ title = "१५"
 विसृजन्त इति । रुष्टैः सुभटैः शोभनयोद्धृभिर्विसृष्टा विमुक्ताः शरा बाणाः । मुखैरग्रैर्ज्वाला उल्का विसृजन्तो मुञ्चन्तः । अत एव भीमा भयानका भुजङ्गमा इवेत्युत्प्रेक्षा । व्योम कर्म । व्यानशिरे व्यापुः । अत्र सुभटकर्तृकविसर्जनव्यापारपूर्वंकव्योमव्याप्त्या प्राग्भाविताविशिष्टशत्रुविग्रहभेदनं ध्वन्यते । अन्यथा व्योमव्याप्तिमात्रस्यैव विवक्षितत्वेन व्यापृतेर्व्यर्थत्वमुद्भाव्येत । तेनात्र वस्तुना वस्तुध्वनिः ॥ 16.8 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 (1)बाढं वपूषि निर्भिद्य धन्विनां निघ्नतां मिथः ।  
 अशोणितमुखा भूमिं प्राविशन्दूरमाशुगाः ॥ 16.9 ॥  
 {1.गाढम्.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+(1)बाढं वपूषि निर्भिद्य धन्विनां निघ्नतां मिथः ।  
+अशोणितमुखा भूमिं प्राविशन्दूरमाशुगाः ॥ 16.9 ॥  
+{1.गाढम्.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -132,9 +221,19 @@ title = "१५"
 बाढमिति । मिथोऽन्योन्यं दूरमतिशयेन निध्नतां प्रहरतां धन्विनां धनुर्धारिणां वपूंषि गात्राणि बाढं गाढम् । दृढमिति यावत् । निर्भिद्याप्यशोणितमुखाः शोणितसाहित्यराहित्यवन्ति मुखान्यग्राणि येषां त आशुगा बाणा भूमिं प्राविशन्प्रविष्टाः । अत्र विभेदका अप्यशोणितमुखा इति विरोधाभासालंकारेण बाणानामतिशीध्रगामित्वरुपवस्तुध्वनिः । न च शीग्रमेव व्यञ्जनीयमिति वाच्यम् । आशुगा इत्यनेनैव तदभिहितत्वात् ॥ 16.9 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 निर्भिद्य(2) दन्तिनः पूर्वं पातयामासुराशुगाः ।  
 पेतुः प्रवरयोधानां प्रीतानामाहवोत्सवे ॥ 16.10 ॥  
 {2.निर्भेद्य.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+निर्भिद्य(2) दन्तिनः पूर्वं पातयामासुराशुगाः ।  
+पेतुः प्रवरयोधानां प्रीतानामाहवोत्सवे ॥ 16.10 ॥  
+{2.निर्भेद्य.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -146,9 +245,19 @@ title = "१५"
 निर्भिद्येति । आहवोत्सवे संग्रामरुपोत्सवे प्रीतानां प्रवरयोधारुनामतिश्रेष्ठयोद्धॄणां सम्बन्धिन आशृगा बाणा दन्तिनो गजान्निर्भिद्य भेदयित्वा पूर्वं पातयामासुः । पश्चात्स्वयमपि पेतुः । अत्र वाक्यार्थरुपवस्तुना प्राणापहारकं तेषामतितेक्ष्णयं वस्तु ध्वन्यत इति वस्तुना वस्तुध्वनिः ॥ 16.10 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 ज्वलदग्निमुखैर्वाणैर्नीरन्ध्रैरितरेतरम् ।  
 उच्चैर्वैमानिका व्योम्नि (1)कीर्णे दूरमपासरन् ॥ 16.11 ॥  
 {1.कीर्णेः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+ज्वलदग्निमुखैर्वाणैर्नीरन्ध्रैरितरेतरम् ।  
+उच्चैर्वैमानिका व्योम्नि (1)कीर्णे दूरमपासरन् ॥ 16.11 ॥  
+{1.कीर्णेः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -160,9 +269,19 @@ title = "१५"
 ज्वलदिति । ज्वलदग्निमुखैः प्रज्वलद्वह्निसहिताग्रैः । तथेतरेतरं परस्परं नीरन्ध्रैर्निर्गतावकाशैः । परस्परसंघट्टितैरिति तात्पर्यार्थः । बाणैः शरैः । उच्चैरतिशयितं यथा तथा कीर्णे व्याप्ते व्योम्नि वैमानिका विमानचारिणो देवा विष्णवादयो दूरमपासरन्दुद्रुवुः । आत्मशरीरसम्बन्धशङ्काकुलत्वादिति भावः ॥ 16.11 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विभिन्नं धन्विनां बाणैर्व्यथा(2)र्तमिव विह्वलम् ।  
 ररास विरसं व्योम (3)श्येनप्रतिरवच्छलात् ॥ 16.12 ॥  
 {2.यथार्थमिव विह्वलम्,वेश्याया इव विह्वलम्,विशाख इव विह्वली.3.सेनापतिरवच्छलात्,सेनापतिरिवच्छलात्.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+विभिन्नं धन्विनां बाणैर्व्यथा(2)र्तमिव विह्वलम् ।  
+ररास विरसं व्योम (3)श्येनप्रतिरवच्छलात् ॥ 16.12 ॥  
+{2.यथार्थमिव विह्वलम्,वेश्याया इव विह्वलम्,विशाख इव विह्वली.3.सेनापतिरवच्छलात्,सेनापतिरिवच्छलात्.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -174,8 +293,17 @@ title = "१५"
 विभिन्नमिति । धन्विनां बाणैर्विभिन्नं विदीर्णम् । अत एव व्यथार्त पीडया दुःखितम् । अत एव विह्वलम् । इतिकर्तव्यताविस्मरणाश्रयमित्यर्थः । व्योम नभः श्येनप्रतिरवस्य पक्षिविशेषप्रतिध्वनेश्छलान्मिषेण विरसं कठोरं यथा तथा ररासेव रुरोदेवेत्युत्प्रेक्षालङ्कार ॥ 16.12 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 चापैराकर्णमाकगृष्टैर्विमुक्ता दूरमाशुगाः ।  
 अधाबन्रुधिरास्वादलुब्धा इव रणैषिणाम् ॥ 16.13 ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+चापैराकर्णमाकगृष्टैर्विमुक्ता दूरमाशुगाः ।  
+अधाबन्रुधिरास्वादलुब्धा इव रणैषिणाम् ॥ 16.13 ॥  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -187,9 +315,19 @@ title = "१५"
 चापैरिति आकर्ण कर्णपर्यन्तमाकृष्टै रणैषिणां योद्धॄणां सम्बन्धिभिश्चापैर्धनुर्भिर्विमुक्ता विसृष्टा आशुगाः शरा रुधिरास्वादे लुब्धा लम्पटा इव दूरमधावन्विद्रुताः । लम्पटा अपि भोजनास्वादाय द्रुतं पलायत्ते तद्वत् । 16.13 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 गृहीताः पाणिभिर्वीरैर्विकोशाः खङ्गराजयः ।  
 (1)कान्तिजालच्छलादाजौ व्यहसन्संमदादिव ॥ 16.14 ॥  
 {1.कान्तिजालच्छलादाजौ व्यहसन्समदा इव, कान्त्याननच्छलादाजेर्व्यहसन् सुमदा इव, कान्त्या जनच्छलादानैर्व्यहसन् प्रमदा इव.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+गृहीताः पाणिभिर्वीरैर्विकोशाः खङ्गराजयः ।  
+(1)कान्तिजालच्छलादाजौ व्यहसन्संमदादिव ॥ 16.14 ॥  
+{1.कान्तिजालच्छलादाजौ व्यहसन्समदा इव, कान्त्याननच्छलादाजेर्व्यहसन् सुमदा इव, कान्त्या जनच्छलादानैर्व्यहसन् प्रमदा इव.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -201,9 +339,19 @@ title = "१५"
 गृहीता इति । आजौ संग्रामे वीरैः कर्तृभिः । पाणिभिर्गृहीताः । तथा विकोशाः । कोशरहिताः । 'कोशोऽस्त्री कुड्मले पाले दिव्यखड्गापिधानके' इति मेदिनी । खड्गराजयः करवालपङ्क्तयः कान्तिजालरच्छलाद् द्युतिसमूहकैतवेन संमदाद्वीराणामपि शत्रुविघातसाधने वयमेव यथीचितास्तथा नान्य इति प्रमोदाद्व्यहसन्निव जहसुरिवेत्युत्प्रेक्षा ॥ 16.14 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 खड्गाः शोणितसंदिग्धा नृत्यन्तो वीरपाणिषु ।  
 (2)रजोघने रणेऽनन्ते (3)विद्युतां वैभवं दधुः ॥ 16.15 ॥  
 {2.रजोघनरणे.3.विभ्रमम्.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+खड्गाः शोणितसंदिग्धा नृत्यन्तो वीरपाणिषु ।  
+(2)रजोघने रणेऽनन्ते (3)विद्युतां वैभवं दधुः ॥ 16.15 ॥  
+{2.रजोघनरणे.3.विभ्रमम्.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -215,9 +363,19 @@ title = "१५"
 खड्गा इति । शोणितेसन्दिग्धा रुधिरसंलिप्ताः । तथा वीरपाणिषु नृत्यन्तः खड्गाः । रजसा घने सान्द्रे । तथानन्तेऽपारे रणे विद्युतां वैभवं दधुः । तद्वच्छुशुभर इत्यर्थः । अत्र पदार्थवृत्तिनिदर्शनालङ्कारः ॥ 16.15 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 कुन्ताश्चकाशिरे चण्डमुल्लसन्तो (1)रणार्थिनाम् ।  
 (2)जिह्वाभोगा यमस्येव लेलिहाना (3)रणाङ्गणे ॥ 16.16 ॥  
 {1.रणार्तिपाः.2.जिह्वाभागा.3.रणक्षये,रणाजिरे.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+कुन्ताश्चकाशिरे चण्डमुल्लसन्तो (1)रणार्थिनाम् ।  
+(2)जिह्वाभोगा यमस्येव लेलिहाना (3)रणाङ्गणे ॥ 16.16 ॥  
+{1.रणार्तिपाः.2.जिह्वाभागा.3.रणक्षये,रणाजिरे.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -229,9 +387,19 @@ title = "१५"
 कुन्ता इति । रणाङ्गणे संग्रामचत्वरे चण्डं प्रचण्डं यथा तथोल्लसन्तो दीप्यमानाः कुन्ताः प्रासाः । भल्ला इति यावत् । 'कुन्तः प्रासे चण्डभावे क्षुद्रजन्तौ गवेधुके' । इतिविश्वः । लेलिहानाः पुनः पुनरतिशयेन वा लिहन्ति ते लेलिहानाः । आस्वादयन्त इत्यर्थः । लिहेर्यङन्ताच्छानच् । यमस्य जिह्वाभोगा रसनारुपयन्त्राणीव । 'आभोगो वरुणच्छत्त्रे पूर्णतायन्त्रयोरपि' । इति विश्वः । चकाशिरे दिद्युतिरे ॥ 16.16 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 प्रज्वलत्कान्ति(4)चक्राणि वरचक्रिणाम् ।  
 (5)चण्डांशुमण्डलश्रीणि रणव्योमनि बभ्रमुः ॥ 16.17 ॥  
 {4.वक्राणि.5.चण्डेषुमण्डल.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+प्रज्वलत्कान्ति(4)चक्राणि वरचक्रिणाम् ।  
+(5)चण्डांशुमण्डलश्रीणि रणव्योमनि बभ्रमुः ॥ 16.17 ॥  
+{4.वक्राणि.5.चण्डेषुमण्डल.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -243,9 +411,19 @@ title = "१५"
 प्रज्वलदिति । प्रज्वलत्प्रदीप्यमानं कान्तिचक्रं द्युतिमण्डलं येषां तानि तथा चण्डां शुमण्डलस्य सूर्यमण्डलस्य श्रीरिव श्रीः शोभा येषां तानि । वराः श्रेष्ठा ये चक्रिणो योधास्तेषां सम्बन्धीनि चक्राण्यायुधविशेषाः । 'चक्रो गणे चक्रवाके चक्रं सैन्यरथाङ्गयोः । ग्रामजाले कुलालस्य भाण्डराष्ट्रास्त्रयोरपि' । इति विश्वः । रणव्योमनि संग्रामरुपगगने बभ्रमुः । 'वा जॄभ्रमुत्रसाम्' इत्येत्वाभ्यासलोपयोर्विकल्पः । अथ व्याख्यानान्तरम्- वरचक्रिणां वराणां वीराणां ये चक्रिणो रथास्तेषां चक्राण्यङ्गानि रणव्योमनि बभ्रमुः । विशेषणद्वयमुभयत्रापि समानम् ॥ 16.17 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 केचि(1)द्धीरैः प्रणादैश्च (2)वीराणामभ्युपेयुषाम् ।  
 निपेतुः क्षोभतो (3)वाहादपरे मुमुहुर्मदात् ॥ 16.18 ॥  
 {1.धोरैः.2.तु.3.वाहा न.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+केचि(1)द्धीरैः प्रणादैश्च (2)वीराणामभ्युपेयुषाम् ।  
+निपेतुः क्षोभतो (3)वाहादपरे मुमुहुर्मदात् ॥ 16.18 ॥  
+{1.धोरैः.2.तु.3.वाहा न.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -257,9 +435,19 @@ title = "१५"
 केचिदिति । अभ्युपेयुषां संमुखमागतवतां वीराणां धीरैर्गम्भीरैः प्रणादैर्गर्जितैः केचिद्वीराः क्षोभतश्चित्तसंचलनाद्धेतोर्वाहादश्वान्निपेतुर्मुमूर्च्छः । अपरे केचिन्मदाद् गर्वान्मुमुहुः । चेतनाविरहिता बभूवुरित्यर्थः ॥ 16.18 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 कश्चिदभ्यागते वीरे जिघांसौ मुदमादधौ   
 परावृत्य गते (4)क्षुब्धे विषसादाहवप्रियः ॥ 16.19 ॥  
 {4.क्षुब्धः,क्षुद्रे.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+कश्चिदभ्यागते वीरे जिघांसौ मुदमादधौ   
+परावृत्य गते (4)क्षुब्धे विषसादाहवप्रियः ॥ 16.19 ॥  
+{4.क्षुब्धः,क्षुद्रे.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -271,9 +459,19 @@ title = "१५"
 कशिचदिति । कश्चिद्वीरो जिघांसौ हन्तुमिच्छौ वौरेऽभ्यागते संमुखमागते सति । मुदमादधौ प्रससाद । अथ च क्षुब्ध एतदीयप्रहारक्षुभितेऽत एव परावृत्य एव परावृत्य गते तु विषसाद खिन्नोऽभूते । यत आहवप्रियः संग्रामप्रियः । वीराणां प्रतिद्वन्द्विसंमुखागमनमेव प्रीतिजनकं भवतीति भावः ॥ 16.19 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 बहुभिः (5)सह युद्ध्वा वा परिभ्रम्य रणोल्बणाः ।  
 (6)उद्दिश्य तानुपेयुः केऽपि ये पूर्ववृता रणे ॥ 16.20 ॥  
 {5.सहयुध्वानः.6.नामग्राहमुपेयुः केऽप्यग्रे पूर्बबूता अयम्.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+बहुभिः (5)सह युद्ध्वा वा परिभ्रम्य रणोल्बणाः ।  
+(6)उद्दिश्य तानुपेयुः केऽपि ये पूर्ववृता रणे ॥ 16.20 ॥  
+{5.सहयुध्वानः.6.नामग्राहमुपेयुः केऽप्यग्रे पूर्बबूता अयम्.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -285,9 +483,19 @@ title = "१५"
 बहुभिरिति । रण उल्बणा उद्भटाः केऽपि योधा रणे संग्रामे बहुभिः सह युद्ध्वा परिभ्रम्य वा तानुद्दिश्योपेयतुर्युद्धार्थमबि जग्मुः । ये पूर्वं वृता अङ्गीकृताः यैः सह पूर्वमयोधि पुनरपि तैरेव सह योद्धुं जग्मुरित्यर्थः ॥ 16.20 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 (1)अभितोऽभ्यागतान्योद्धुं(2) वीरान्रण(3)मदोद्धतान् ।  
 (4)प्रत्यनन्दन्भुजादण्डरोमोद्गमभृतो भटाः ॥ 16.21 ॥  
 {1.अप्यागतान्.2.योधी.3.मदोल्बणान्,मदोद्धताः.4.प्रत्यध्न स्तद्भुजादण्डे रोमोद्गमभृतो मदात्.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+(1)अभितोऽभ्यागतान्योद्धुं(2) वीरान्रण(3)मदोद्धतान् ।  
+(4)प्रत्यनन्दन्भुजादण्डरोमोद्गमभृतो भटाः ॥ 16.21 ॥  
+{1.अप्यागतान्.2.योधी.3.मदोल्बणान्,मदोद्धताः.4.प्रत्यध्न स्तद्भुजादण्डे रोमोद्गमभृतो मदात्.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -299,9 +507,19 @@ title = "१५"
 अभित इति । भुजादण्डेषु यो रोम्णामुद्गमस्तं बिभ्रति तथाभूता भटा योधाः कर्तारः । रणस्य संग्रामस्य मदेनोद्धतान् । अत एव योद्धुमभितोऽभ्यागतान्वीरान् । आलोक्येति शेषः । प्रत्यनन्दन्नहृष्यन् ॥ 16.21 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 शस्त्रभिन्नेभकुम्भेभ्यो मौक्तिकानि च्युतान्यधः(5) ।  
 (6)अध्याहवक्षेत्रमुप्तकीर्तिभीजाङ्करश्रियम् ॥ 16.22 ॥  
 {5.अधुः.6.आहवक्षेत्रमभ्युप्तकीर्तिबीजोत्करश्रियम्.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+शस्त्रभिन्नेभकुम्भेभ्यो मौक्तिकानि च्युतान्यधः(5) ।  
+(6)अध्याहवक्षेत्रमुप्तकीर्तिभीजाङ्करश्रियम् ॥ 16.22 ॥  
+{5.अधुः.6.आहवक्षेत्रमभ्युप्तकीर्तिबीजोत्करश्रियम्.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -313,8 +531,17 @@ title = "१५"
 शस्त्रेति । शस्त्रैर्भिन्ना विदीर्णा य इभकुम्भा गजगण्डस्थलानि 'कुम्भः स्यात्कुम्भकर्णस्य सुते वेश्यापतौ घटे राशिभेदे द्विपाङ्गे च' इति विश्वः । 'तेभ्योऽधश्चयुतानि मौक्तिकानि कर्तृणि । अध्याहवक्षेत्रमधिसंग्रामकेदारम् । उप्तम् । 'टुवप् बीजसंताने' इत्यतो निष्ठा । यत्कीर्तिबीजं यशोरुपमहीरुहबीजं तस्याङ्कुरस्तस्य श्रियं शोभाम् । दधुरिति शेषः ॥ 16.22 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 वीराणां विषमैर्घोषूर्विद्रुता वारणा रणे ।  
 शास्यमाना अपि त्रासाद्भेजुर्धूताङ्कुशा दिशः 16.23 ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+वीराणां विषमैर्घोषूर्विद्रुता वारणा रणे ।  
+शास्यमाना अपि त्रासाद्भेजुर्धूताङ्कुशा दिशः 16.23 ॥  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -326,9 +553,19 @@ title = "१५"
 वीराणामिति । रणे विषमैदुः सहैर्वीराणां धोषेर्विद्रुताः पलायिता वारणा गजाः शास्यमानाः शिष्यमाणा अपि । यन्तृभिरिति शेषः धूताङ्कुशा अपमानिताङ्कुशाः सन्तस्त्रासाद्दिशो भेजुः । 'तॄफलभज-' इत्येत्वाभ्यासलोपौ दिशः प्रति पलायांचक्रिरे ॥16.23 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 रणे वाणगणैर्भिन्ना भ्रमन्तो भिन्नयोधिनः ।  
 निममज्जु(1)र्मिलद्रक्तनिम्नगासु(2) महागजाः ॥ 16.24 ॥  
 {1.गलत्.2.निमग्ना) सुमहागजाः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+रणे वाणगणैर्भिन्ना भ्रमन्तो भिन्नयोधिनः ।  
+निममज्जु(1)र्मिलद्रक्तनिम्नगासु(2) महागजाः ॥ 16.24 ॥  
+{1.गलत्.2.निमग्ना) सुमहागजाः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -340,9 +577,19 @@ title = "१५"
 रण इति । रणे संग्रामे बाणगणैः शत्रुशरनिकरैर्भिन्नयोधिनो विदीर्णयन्तारः । अत एव स्वयमपि भिन्ना अत एव भ्रमन्तो महागजा मिलन्त्यः सयिजन्त्यो या रक्तस्य निम्नगा नद्यस्तासु निममज्जुः ॥ 16.24 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 (3)अपारेऽसृक्सरित्पूरे रथेषूच्चैस्तरेष्वपि ।  
 (4)रथिनोऽभिरिपुं क्रुद्धा हुंकृतैर्व्यसृजञ्शरान् ॥ 16.25 ॥  
 {3.अपरेऽसूसरित्पूरे.4.अमिरर्थि क्रुद्धा हुङ्कृतैः,अभिक्रुधा क्रुद्धहुङ्कृतैः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+(3)अपारेऽसृक्सरित्पूरे रथेषूच्चैस्तरेष्वपि ।  
+(4)रथिनोऽभिरिपुं क्रुद्धा हुंकृतैर्व्यसृजञ्शरान् ॥ 16.25 ॥  
+{3.अपरेऽसूसरित्पूरे.4.अमिरर्थि क्रुद्धा हुङ्कृतैः,अभिक्रुधा क्रुद्धहुङ्कृतैः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -354,9 +601,19 @@ title = "१५"
 अपार इति । उच्चैस्तरेष्वपि रथेष्वपारेऽगाधेऽसृक्सरित्पूरे रुधिरनदीप्रवाहे मज्जत्सु सत्सु रथिनो रथारोहाः क्रद्धाः । अत एव हुंकृतैः । भीषयन्त इति शेषः । अभिरिपुं शत्रुसंमुखं शरान्व्यसृजंस्तत्यजुः ॥ 16.25 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 खड्गनिर्लूमूर्धानो (1)व्यापतन्तोऽपि वाजिनः ।  
 प्रथमं पातयामासुरसिना दारितानरीन् ॥ 16.26 ॥  
 {1.व्यापतन्तः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+खड्गनिर्लूमूर्धानो (1)व्यापतन्तोऽपि वाजिनः ।  
+प्रथमं पातयामासुरसिना दारितानरीन् ॥ 16.26 ॥  
+{1.व्यापतन्तः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -368,9 +625,19 @@ title = "१५"
 खड्गेति । खड्गनिर्लूनमूर्धानः करवालकृत्तशिरसः । अत एव वाजिनोऽश्वाद्व्यापतन्तोऽप्यसिना खड्गेन दारितान्विदीर्णानरीन्प्रथमं पातयामासुः । पुनः स्वयं पेतुरिति शेषः । अत्र 'दारयित्वासिना रिपून्' इति पाठः साधीयान् ॥ 16.26 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 वीराणां शस्त्र(2)भिन्नानि शिरांसि निपतन्त्यपि ।  
 (3)अधावन्दन्तदष्टोष्ठभीमान्यभिरिपुं क्रुधा ॥ 16.27 ॥  
 {2.भिन्नानाम्.3.दन्तदष्टौष्ठगीषणान्यरिषु.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+वीराणां शस्त्र(2)भिन्नानि शिरांसि निपतन्त्यपि ।  
+(3)अधावन्दन्तदष्टोष्ठभीमान्यभिरिपुं क्रुधा ॥ 16.27 ॥  
+{2.भिन्नानाम्.3.दन्तदष्टौष्ठगीषणान्यरिषु.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -382,9 +649,19 @@ title = "१५"
 वीराणामिति । शस्त्रभिन्नान्यत एव निपतन्त्यपि दन्तैर्दष्टाः पीडिता य ओष्ठा अधरास्तैर्भीमानि घोराणि वीराणां शिरांसि क्रुधाभिरिपुं वैरिसंमुखमधावन् ॥ 16.27 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 शिरांसि वरयोधानामर्धचन्द्रहृतान्यलम्(4) ।  
 (5)आदधाना भृशं पादैः श्येना व्यानशिरे (6)नभः ॥ 16.28 ॥  
 {4.अपि.5.आददाना.6.दिशः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+शिरांसि वरयोधानामर्धचन्द्रहृतान्यलम्(4) ।  
+(5)आदधाना भृशं पादैः श्येना व्यानशिरे (6)नभः ॥ 16.28 ॥  
+{4.अपि.5.आददाना.6.दिशः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -396,9 +673,19 @@ title = "१५"
 शिरांसीति । अर्धचन्द्रहृतान्यर्धचन्द्राकारबाणकर्तितानि वरयोधानां शिरांसि । पदैरादधाना गृह्णान्तः श्येनाः पक्षिविशेषा भृशमतिशयेन नभोव्यानशिरे व्यापुः । सर्वस्मिन्नेव नभसि श्येननीतमस्तकान्येव जातानीति भावः ॥ 16.28 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 क्रोधादभ्यापतद्दन्तिदन्तारुढाः(1) पदातयः ।  
 (2)अश्वारोहा गजारोहप्राणान्प्रासैरपाहरन् ॥ 16.29 ॥  
 {1.दन्तारुढे,वाजिषु दन्तारुढांनृवाजिषु.2.अश्वारुढाः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+क्रोधादभ्यापतद्दन्तिदन्तारुढाः(1) पदातयः ।  
+(2)अश्वारोहा गजारोहप्राणान्प्रासैरपाहरन् ॥ 16.29 ॥  
+{1.दन्तारुढे,वाजिषु दन्तारुढांनृवाजिषु.2.अश्वारुढाः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -410,9 +697,19 @@ title = "१५"
 क्रोधादिति । पदातयः पद्गतयोऽश्वारोहाश्च क्रोधाद्धेतोरभ्यापततां समृखमागच्छतां दन्तिनां दन्तेष्वारुढाः सन्तः प्रासैः कुन्तैर्गजारोहप्राणान्यन्तृणामसूनपाहरन् ॥ 16.29 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 शस्त्रच्छिन्नगजारोहा विभ्रमन्त इतस्ततः ।  
 (3)युगान्तवातचलिताः शैला इव गजा बभुः ॥ 16.30 ॥  
 {3.सहयुध्वानः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+शस्त्रच्छिन्नगजारोहा विभ्रमन्त इतस्ततः ।  
+(3)युगान्तवातचलिताः शैला इव गजा बभुः ॥ 16.30 ॥  
+{3.सहयुध्वानः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -424,8 +721,17 @@ title = "१५"
 शस्त्रेति । शस्त्रैश्छिन्ना गजारोहा येषामत एवेतस्ततो विभ्रमन्तो गजाः युगान्तवातैः प्रलयप्रभञ्जनैश्चालिता उत्पातिताः शैला इव बभुः शुशुभिरे ॥ 16.30 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 मिलितेषु मिथो योद्धुं दन्तिषु प्रसभं भटाः ।  
 अगृह्णान्युद्ध्यमानाश्च शस्त्रैः प्राणान्परस्परम् ॥ 16.31 ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+मिलितेषु मिथो योद्धुं दन्तिषु प्रसभं भटाः ।  
+अगृह्णान्युद्ध्यमानाश्च शस्त्रैः प्राणान्परस्परम् ॥ 16.31 ॥  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -437,9 +743,19 @@ title = "१५"
 मिलितेष्विति । योद्धुं मिलितेषु दन्तिषु । आरुढा इति शेषः । भटा मिथोऽन्योन्यं युद्ध्यमानाः प्रसभं बलाच्छस्त्रैः कृत्वा परस्परं प्राणानगृह्णान् ॥ 16.31 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 (1)रुषा मिथो मिलद्दन्तिदन्तसंघर्षजोऽनलः ।  
 योधाञ्शस्त्रहृतप्राणा(2)नदहत्सहसारिभिः ॥ 16.32 ॥  
 {1.गजारुढात्.2.सह सादिभिः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+(1)रुषा मिथो मिलद्दन्तिदन्तसंघर्षजोऽनलः ।  
+योधाञ्शस्त्रहृतप्राणा(2)नदहत्सहसारिभिः ॥ 16.32 ॥  
+{1.गजारुढात्.2.सह सादिभिः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -451,9 +767,19 @@ title = "१५"
 रुषेति । रुषा क्रोधेन मिथोऽन्योन्यं मिलतां दन्तिनां ये दन्तास्तेषां संघर्षाज्जातोऽनलोऽग्निररिभिर्वैरिभिः शस्त्रैर्हृताः प्राणा येषां तान्योधान्सहसाकस्माददहत्पुप्लोप ॥ 16.32 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 आक्षिप्ता(3) अपि (4)दन्तीन्द्राः कोपनैः पत्तयः (5)परम् ।  
 (6)तदसूनहरन्खड्गाघातैः(7) स्वस्य पुरः प्रभोः ॥ 16.33 ॥  
 {3.उत्क्षिप्ताः.4.हस्तीन्द्रैः.5.करैः.च.6.ते रिपूनहनन्.7.खड्गपातैः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+आक्षिप्ता(3) अपि (4)दन्तीन्द्राः कोपनैः पत्तयः (5)परम् ।  
+(6)तदसूनहरन्खड्गाघातैः(7) स्वस्य पुरः प्रभोः ॥ 16.33 ॥  
+{3.उत्क्षिप्ताः.4.हस्तीन्द्रैः.5.करैः.च.6.ते रिपूनहनन्.7.खड्गपातैः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -465,9 +791,19 @@ title = "१५"
 आक्षिप्ता इति । परमतिशयितं कोपनैः क्रुद्धैर्दन्तीन्द्रैराक्षिप्ता अपि । आक्षेप्तुं शुण्डेन गृहीता अपीत्यर्थः । पत्तयः पादचारिणः स्वस्य प्रभोः पुरः खड्गाघातैस्तदसून्दन्तीन्द्रप्राणानहरञ्जगृहुः ॥ 16.33 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 उत्क्षिप्य करिभि(8)र्दूरान्मुक्तानां योधिनां दिवि(9) ।  
 प्रापि जीवात्मभिर्दिव्या(10) गतिर्वा विग्रहैर्मही ॥ 16.34 ॥  
 {8.दूरम्.9.दिवः.10.दिव्याङ्गनाकण्ठपरिग्रहः,दिव्याङ्गनैषां विग्रहैः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+उत्क्षिप्य करिभि(8)र्दूरान्मुक्तानां योधिनां दिवि(9) ।  
+प्रापि जीवात्मभिर्दिव्या(10) गतिर्वा विग्रहैर्मही ॥ 16.34 ॥  
+{8.दूरम्.9.दिवः.10.दिव्याङ्गनाकण्ठपरिग्रहः,दिव्याङ्गनैषां विग्रहैः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -479,9 +815,19 @@ title = "१५"
 उत्क्षिप्येति । करिभिरुत्क्षिप्योत्थाप्य दिवि दूरान्मुक्तानां जीवात्मभिर्जिवैः प्राणैरिति यावत् । दिव्या स्वर्गिया गतिः प्रापि । विग्रहैर्देहैर्मही वा प्रापि प्राप्ता । कर्मणि लुङ् ॥ 16.34 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 खड्गैर्धवलधारालैर्निहत्य करिणां करान् ।  
 तैर्भुवापि(1) समं (2)विद्वान्संतोषं न भटा ययुः ॥ 16.35 ॥  
 {1.यैः.2.वृद्धं शस्त्र्या तान्पत्तयोऽहरन्.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+खड्गैर्धवलधारालैर्निहत्य करिणां करान् ।  
+तैर्भुवापि(1) समं (2)विद्वान्संतोषं न भटा ययुः ॥ 16.35 ॥  
+{1.यैः.2.वृद्धं शस्त्र्या तान्पत्तयोऽहरन्.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -493,9 +839,19 @@ title = "१५"
 खड्गैरिति । भटा योद्धा धवलधारालैर्धवलां धारां लान्ति गृह्णान्ति तैः । शुभ्रधारैरित्यर्थः । अद्वितीयैः खड्गैः कृत्वा भुवा पृथिव्या समं विद्धान्प्रहृतान्करिणां कराञ्शुण्डान्निहत्यापि लवित्वापि सन्तोषं तृप्तिं न ययुः । अन्यानपि निहन्मीति बुद्धिमन्तो बभूवुरित्यर्थः ॥ 16.35 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 (3)आक्षिप्याभिदिवं नीताः पत्तयः करिभिः करः ।  
 दिव्याङ्गनाभिरादातुं रक्ताभि(4)र्द्रुतमीषिरे ॥ 16.36 ॥  
 {3.उत्क्षिण्य.4.वृतम्बरम्,व्याप्तमम्बरम्.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+(3)आक्षिप्याभिदिवं नीताः पत्तयः करिभिः करः ।  
+दिव्याङ्गनाभिरादातुं रक्ताभि(4)र्द्रुतमीषिरे ॥ 16.36 ॥  
+{3.उत्क्षिण्य.4.वृतम्बरम्,व्याप्तमम्बरम्.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -507,9 +863,19 @@ title = "१५"
 आक्षिप्येति । करिभिः कर्तृभिः । करैर्दण्डैः कृत्वाक्षिप्योत्थाप्याभिदिवमाकाशसंमुखं नीताः प्रापिताः पत्तयः पादचारिणो रक्ताभिरनुरक्ताभिर्दिव्याङ्गनाभिर्द्रुतं शीघ्रमादातुं ग्रहीतुमीषिरे इष्टा बभूवुः । अहमेतान्ग्रहीष्यामि, अहमेतान्ग्रहीष्यामीति त्वरिता बभूवुः ॥ 16.36 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 धन्विनस्तुरगारुढा गजारोहाञ्शरैः क्षतान् ।  
 (5)प्रत्यैच्छन्मूर्च्छितान्भूयो योद्धुमाश्वसतश्चिरम् ॥ 16.37 ॥  
 {5.प्रत्यैक्षन्.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+धन्विनस्तुरगारुढा गजारोहाञ्शरैः क्षतान् ।  
+(5)प्रत्यैच्छन्मूर्च्छितान्भूयो योद्धुमाश्वसतश्चिरम् ॥ 16.37 ॥  
+{5.प्रत्यैक्षन्.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -521,9 +887,19 @@ title = "१५"
 धन्विन इति । तुरगारुढा धन्विनो धनुर्धारिणो योधाः शरैः क्षतान् । अत एवन मूर्च्छितान्गजारोहान्यन्तृन्भूयोऽपि पुनरपि योद्धुमाश्वसतो जीवत एतादृशांश्चिरं प्रत्यैच्छन् । प्रतीक्षन्ते स्मेत्यर्थः ॥ 16.37 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 क्रुद्धस्य (1)दन्तिनः पर्त्तिर्जिघृक्षोरसिना करम् ।  
 निर्भिद्य (2)दन्तमुसलावारुरोह जिघृक्षया ॥ 16.38 ॥  
 {1.करिणः.2.दन्तमुसलान्,दन्तमुसलेन.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+क्रुद्धस्य (1)दन्तिनः पर्त्तिर्जिघृक्षोरसिना करम् ।  
+निर्भिद्य (2)दन्तमुसलावारुरोह जिघृक्षया ॥ 16.38 ॥  
+{1.करिणः.2.दन्तमुसलान्,दन्तमुसलेन.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -535,9 +911,19 @@ title = "१५"
 क्रुद्धस्येति । पत्तिः पादचारी काश्चिद्योधः क्रुद्धस्यात एव जिघृक्षोर्गृहीतुमिच्छोर्दन्तिनः करं दन्तयोरधोभागम् । असिना निर्भिद्य अच्छित्वा जिघृक्षया प्रत्युत तस्यैव ग्रहीतुमिच्छया दन्तमुसलावारुरोहारुढवान् ॥ 16.38 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 खड्गेन (3)मूलतो हत्वा दन्तिनो (4)रदनद्वयम् ।  
 (5)प्रातिपक्ष्ये प्रवेष्टोऽपि पदातिर्निरगाद्द्रुतम् ॥ 16.39 ॥  
 {3.आमूलतः.4.अङ्ध्रिचतुष्टयम्.5.प्रपतिष्णोः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+खड्गेन (3)मूलतो हत्वा दन्तिनो (4)रदनद्वयम् ।  
+(5)प्रातिपक्ष्ये प्रवेष्टोऽपि पदातिर्निरगाद्द्रुतम् ॥ 16.39 ॥  
+{3.आमूलतः.4.अङ्ध्रिचतुष्टयम्.5.प्रपतिष्णोः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -549,8 +935,17 @@ title = "१५"
 खड्गेनेति । प्रातिपक्ष्ये शत्रुसम्बन्धिनि सैन्ये प्रविष्टोऽपि पदातिः पादचारी दन्तिनो गजस्य रदनद्वयं दन्तद्वयं खड्गेन कृत्वा मूलतो मूलाद्धत्वा भित्त्वा द्रुतं निरगान्निश्चक्राम । शत्रुसैन्यप्रविष्टस्य मरणमेव ध्रुवम्, तदस्य विपरीतमभूदित्यपिना द्योत्यते ॥ 16.39 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 करेण करिणा वीरः सुगृहीतोऽपि कोपिना ।  
 असिनासीञ्जहाराशु तस्यैव स्वयमक्षतः ॥ 16.40 ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+करेण करिणा वीरः सुगृहीतोऽपि कोपिना ।  
+असिनासीञ्जहाराशु तस्यैव स्वयमक्षतः ॥ 16.40 ॥  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -562,9 +957,19 @@ title = "१५"
 करेणेति । कोपिना क्रुद्धेन करिणा दन्तिना कर्त्रा । करेण कृत्वा सुतरां गृहीतोऽपि वीरोऽसिना खड्गेन तस्यैव करिण एवासून्प्राणाञ्जहार हृतवान् । स्वयमक्षतोऽभूत् ॥ 16.40 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 (1)तुरङ्गी तुरगारुढं प्रासेनाहत्य वक्षसि ।  
 पततस्तस्य नाज्ञासी(2)त्प्रसघातं स्वके हृदि ॥ 16.41 ॥  
 {1.तुरगी.2.प्रासपातम्.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+(1)तुरङ्गी तुरगारुढं प्रासेनाहत्य वक्षसि ।  
+पततस्तस्य नाज्ञासी(2)त्प्रसघातं स्वके हृदि ॥ 16.41 ॥  
+{1.तुरगी.2.प्रासपातम्.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -576,9 +981,19 @@ title = "१५"
 तुरङ्गीति । तुरङ्ग्यश्वारोहः कश्चिद्योद्धा तुरगारुढमश्ववारं प्रासेन कुन्तेन वक्षस्याहत्य ताडयित्वा पततस्तस्याश्ववारस्य कर्तृकं स्वक आत्मीये हृदि प्रासघातं कुन्तक्षतं नाज्ञासीन्न विजज्ञे । तदीयपतनजानन्दस्योद्वेलत्वादिति भावः ॥ 16.41 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 द्विषा प्रासहृतप्राणो वाजिपृष्ठदृढासनः ।  
 (3)हस्तोद्धृतमहाप्रासो (4)भुवि जीव(5)न्निवाभ्रमत् ॥ 16.42 ॥  
 {3.हस्तोद्धतमहाप्रासाः.4.भटः.5.अभवत्.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+द्विषा प्रासहृतप्राणो वाजिपृष्ठदृढासनः ।  
+(3)हस्तोद्धृतमहाप्रासो (4)भुवि जीव(5)न्निवाभ्रमत् ॥ 16.42 ॥  
+{3.हस्तोद्धतमहाप्रासाः.4.भटः.5.अभवत्.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -590,9 +1005,19 @@ title = "१५"
 द्विषिते । द्विषा शत्रुणा कृत्वा हृतप्राणो मारितः । तथा वाजिपृष्ठेऽश्वपृष्ठभागे दृढासनः प्रग्दृढासनत्वान्मृतत्वे दृढत्वं युक्तम् । तथा हस्त उद्धृतो महाप्रासो येन तथाभूतः कश्चिज्जीवन्निव भुव्यभ्रमत् । अश्वभ्रमणवशाद्भमञ्शवोऽशव इव लक्षित इति भावः ॥ 16.42 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तुरङ्गसादिनं शस्त्रहृतप्राणं मतं भुवि ।  
 (1)अबद्धोऽपि महावाजी न(2) साश्रुनयनोऽत्यजत् ॥ 16.43 ॥  
 {1.अन्त्राद्यः.2.नात्रस्तनयनः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+तुरङ्गसादिनं शस्त्रहृतप्राणं मतं भुवि ।  
+(1)अबद्धोऽपि महावाजी न(2) साश्रुनयनोऽत्यजत् ॥ 16.43 ॥  
+{1.अन्त्राद्यः.2.नात्रस्तनयनः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -604,9 +1029,19 @@ title = "१५"
 तुरङ्गेति । अबद्धोऽप्यनिरुद्धोऽपि महावाजी महाश्वः साश्रुणी सबाष्पे नयने यस्य तथाभूतः सन् । शस्त्रहृतप्राणमत एव भुवि गतं तुरङ्गसादिनमश्ववारं नात्यजन्न जहौ । किन्तु तज्जीवनमपेक्षमाणस्तत्रैव तस्थावित्यर्थः ॥ 16.43 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 (3)भल्लेन शितधारेण भिन्नोऽपि रिपुणाश्वगः ।  
 नामूर्च्छत्कोपतो हन्तुमियेष (4)प्रपतन्नपि ॥ 16.44 ॥  
 {3.खड्गेन.4.च पतन्,निपतन्.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+(3)भल्लेन शितधारेण भिन्नोऽपि रिपुणाश्वगः ।  
+नामूर्च्छत्कोपतो हन्तुमियेष (4)प्रपतन्नपि ॥ 16.44 ॥  
+{3.खड्गेन.4.च पतन्,निपतन्.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -618,9 +1053,19 @@ title = "१५"
 भल्लेनेति । रिपुणा कर्त्रा । शितधारेण तीक्ष्णधारेण भल्लेन भिन्नोऽपि विदारितोऽप्यश्वगस्तुरङ्गगामी कोपतः क्रोधवशान्नामूर्च्छन्न मुह्यति स्म । किन्तु प्रपतन्नप्यश्वादधः स्त्रंसमानोऽपि रिपुं हन्तुमियेषैच्छत् ॥ 16.44 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 मिथः (5)प्रासाहतौ वाजिच्युतौ भूमिगतौ रुषा ।  
 (6)शस्त्र्या युयुधतुः कौचित्कोशाकेशि भुजाभुजि ॥ 16.45 ॥  
 {5.प्रासहतौ प्रहारतः.6.शस्त्रैः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+मिथः (5)प्रासाहतौ वाजिच्युतौ भूमिगतौ रुषा ।  
+(6)शस्त्र्या युयुधतुः कौचित्कोशाकेशि भुजाभुजि ॥ 16.45 ॥  
+{5.प्रासहतौ प्रहारतः.6.शस्त्रैः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -632,9 +1077,19 @@ title = "१५"
 मिथ इति । मिथोऽन्योन्यं प्रासेनाहतौ । अत एव वाजिभ्यां सकाशाच्च्युतावधः पतितौ । अत एव भूमिं गतौ कौचिद्योधौ रुषा युतौ सन्तौ शस्त्र्या खड्गपुत्र्या युयुधर्युयुधाते । अथ च केशाकेशि केशेषु केशेषु गृहीत्वा प्रवृत्तं यद्युद्धम्, भुजाम्यां भुजाभ्यां प्रहृत्य प्रवृत्तं यद्युद्धं तदभूत् । 'तत्र तेनेदमिति सरुपे' इति सूत्रेण समासः ॥ 16.45 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 रथिनो रथिभिर्बाणैर्हृतप्राणा दृढासनाः ।  
 (1)क्षतकार्मुकसंधानाः सप्राणा इव मेनिरे(2) ॥ 16.46 ॥  
 {1.कृत.2.रेजिरे.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+रथिनो रथिभिर्बाणैर्हृतप्राणा दृढासनाः ।  
+(1)क्षतकार्मुकसंधानाः सप्राणा इव मेनिरे(2) ॥ 16.46 ॥  
+{1.कृत.2.रेजिरे.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -646,9 +1101,19 @@ title = "१५"
 रथिन इति । रथिभी रथारोहैः कर्तृभिः । बाणैः कृत्वा हृतप्राणास्तथा दृढासनाः क्षतं नष्टं कार्मुकसंधानं धनुःसज्जीकरणं येषामेवंभूता रथिनो रथारोहाः सप्राणा इव जीवन्त इव मेनिरे मताः । कर्मणि लिट् । द्रष्टृभिरिति शेषः ॥ 16.46 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 न रथी रथिनं भूयः प्राहरच्छस्त्रमूर्च्छितम् ।  
 प्रत्याश्वसन्त(3)मन्विच्छ(4)न्नातिष्ठद्युधि लोभतः ॥ 16.47 ॥  
 {3.मत्वैनम्.4.नागाद्युद्धमलोभतः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+न रथी रथिनं भूयः प्राहरच्छस्त्रमूर्च्छितम् ।  
+प्रत्याश्वसन्त(3)मन्विच्छ(4)न्नातिष्ठद्युधि लोभतः ॥ 16.47 ॥  
+{3.मत्वैनम्.4.नागाद्युद्धमलोभतः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -660,9 +1125,19 @@ title = "१५"
 नेति । रथी रथारोहः शस्त्रेण मूर्च्छितमचेतितं रथिनं भूयो न प्राहरत् । किन्तु पुनरपि युधि लोभतो लोभेन । तृतीयार्थे तसिः । प्रत्याश्वसन्तं पुनरुज्जीवन्तमन्विच्छन्नपेक्षमाणः सन्नतिष्ठत् ॥ 16.47 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 अन्योन्यं रथिनौ कौचिद्(5)गतप्राणौ दिवं गतौ ।  
 एकामप्सरसं प्राप्य युयुधाते वरायुधौ ॥ 16.48 ॥  
 {5.हृतप्राणौ;हतप्राणौ.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+अन्योन्यं रथिनौ कौचिद्(5)गतप्राणौ दिवं गतौ ।  
+एकामप्सरसं प्राप्य युयुधाते वरायुधौ ॥ 16.48 ॥  
+{5.हृतप्राणौ;हतप्राणौ.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -674,9 +1149,19 @@ title = "१५"
 अन्योन्यमिति । वरायुधौ श्रेष्ठायुधौ कौचिद्रथिनावन्योन्यं परस्परेण कृत्वा गतप्राणौ गमितासू अत एव दिवं गतावेकामप्सरसं प्राप्य युयुधाते । अहमेतां ग्रहीष्यामि, अहमेतां ग्रहीष्यामीति वदन्तौ कलहं चक्रतुरित्यर्थः ॥ 16.48 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 मिथोऽर्धचन्द्रनिर्लूनमूर्धानौ (1)रथिनौ (2)रुचा ।  
 (3)खेचरौ भुवि नृत्यन्तौ स्वकबन्धावपश्यताम् ॥ 16.49 ॥  
 {1.रुषितौ.2.रुषा.3.खचरैः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+मिथोऽर्धचन्द्रनिर्लूनमूर्धानौ (1)रथिनौ (2)रुचा ।  
+(3)खेचरौ भुवि नृत्यन्तौ स्वकबन्धावपश्यताम् ॥ 16.49 ॥  
+{1.रुषितौ.2.रुषा.3.खचरैः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -688,9 +1173,19 @@ title = "१५"
 मिथ इति । मिथोऽन्योन्यमर्धचन्द्रेण तदाकारबाणेन निर्लूनमूर्धानौ छिन्नमस्तकावत एव खेचरावाकाशचारिणौ रुचा कान्त्या युतौ कौचिद्रथिनौ रथारोहौ कर्तारौ । भुवि नृत्यन्तौ गात्रं विक्षिपन्तौ स्वकबन्धौ शिरोरहितस्वदेहौ कर्म । अपश्यतां दृष्टवन्तौ ॥ 16.49 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 रणाङ्गणे शोणित(4)पङ्कपिच्छिले कथं कथं चिन्ननृतुर्धृतायुधाः ।  
 नदत्सु तुर्येषु परेतयोषितां गणेषु गायत्सु कबन्धराजयः ॥ 16.50 ॥  
 {4.शोभित.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+रणाङ्गणे शोणित(4)पङ्कपिच्छिले कथं कथं चिन्ननृतुर्धृतायुधाः ।  
+नदत्सु तुर्येषु परेतयोषितां गणेषु गायत्सु कबन्धराजयः ॥ 16.50 ॥  
+{4.शोभित.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -702,11 +1197,23 @@ title = "१५"
 रणेति । तूर्येषु नदत्सु सत्सु, परेतयोषितां भूताङ्गनानां गणेषु गायत्सु सत्सु, धृतायुधाः कबन्धराजयः शिरोरहितदेहपङ्क्तयः शोणितपङ्कपिच्छिले रुधिरकर्दमलिप्ते । अनेन स्निग्धत्वमुक्तम् । रणाङ्गणे संग्रामचत्वरे कथं कथंचिन्महता कष्टेन ननृतुर्गात्रं विचिक्षिपुः । भूमेरतिस्निग्धतया पादयोः स्यैर्येण स्थापनासम्भवान्नृत्ये प्रसत्नो योग्य इति भावः । एषां श्लोकानां स्फुटार्थत्वाद्विस्तरेण विवृतिर्नोक्ता । प्रसङ्गाद्वक्तव्यनिर्धारणेन लाघवाद्यकारि । अथः क्षन्तव्यमित्यलम् । उपजातिर्वृत्तम् ॥ 16.50 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 इति सुररिपुर्वृत्ते युद्धे सुरासुरसैन्ययो  
 रुधिरसरितां मज्जद्दन्तिव्रजेषु तटोष्वलम् ।  
 अरुणनयनः (1)क्रोधाद्भीमभ्रमद्भृकुटीमुखः   
 सपदि ककुभामीशानभ्यागमत्सयुयुत्सया ॥ 16.51 ॥  
 {1.क्रोधापीनभ्रमद्भृकुटीमुखः;क्रोधासीनभ्रमद्धृकुटीमुखाः.}  
+</details>
+
+<details><summary>मूलम्</summary>
+
+इति सुररिपुर्वृत्ते युद्धे सुरासुरसैन्ययो  
+रुधिरसरितां मज्जद्दन्तिव्रजेषु तटोष्वलम् ।  
+अरुणनयनः (1)क्रोधाद्भीमभ्रमद्भृकुटीमुखः   
+सपदि ककुभामीशानभ्यागमत्सयुयुत्सया ॥ 16.51 ॥  
+{1.क्रोधापीनभ्रमद्भृकुटीमुखः;क्रोधासीनभ्रमद्धृकुटीमुखाः.}  
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -718,8 +1225,19 @@ title = "१५"
 इतीति । इति पूर्वोक्तप्रकारेण सुरासुरसैन्ययोर्देवदैत्यसैन्ययोर्युद्धे संग्रामे वृत्ते भूते सति । तथा रुधिरसरितां शोणितनदीनां तटेषु मज्जन्तो निमग्नीभवन्तो दन्तिव्रजा गजसमूहा येषु तथाभूतेषु सत्सु । अलमतिशयेन क्रोधाद्धेतोररुणनयनो रक्तलोचनः । तथा भीमे भयानके भ्रमती विवर्तमाने भृकुटीमुखे भृकुट्योरग्रे यस्य तथोक्तः स सुररिपुस्तारको युयुत्सया योद्धुमिच्छया सपदि तत्क्षणमेव ककुभां दिशमीशानिन्द्रादीनष्टदिक्पालानभ्यागमत्संमुखमाजगाम । हरिणीवृत्तम्- 'रसयुगहयैर्न्सौ म्नौ स्लौ गो यदा हरिणी तदा' इति लक्षणात् ॥ 16.51 ॥
 </details>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 इति श्रीपर्वणीकरोपनामकश्रीलक्ष्मणभट्टात्मजसतीगर्भसम्भव-  
 श्रीसीतारामकविविरचितया संजीविनीसमाख्यया व्याख्यया  
 समेतः श्रीकालिदासकृतौ कुमारसम्भवे-महाकाव्ये  
 सुरासुरसैन्यसंग्रामवर्णनं नाम षोडशः सर्गः ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+इति श्रीपर्वणीकरोपनामकश्रीलक्ष्मणभट्टात्मजसतीगर्भसम्भव-  
+श्रीसीतारामकविविरचितया संजीविनीसमाख्यया व्याख्यया  
+समेतः श्रीकालिदासकृतौ कुमारसम्भवे-महाकाव्ये  
+सुरासुरसैन्यसंग्रामवर्णनं नाम षोडशः सर्गः ॥  
+</details>
 
